clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__here_docs__parse_here_doc_double_quoted_delimiter.snap
---
source: clash-brush-parser/src/parser/tests/here_docs.rs
assertion_line: 67
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat <<\"EOF\"\n$variable should not expand\nEOF\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(HereDocument(None, IoHereDocument(
                    here_end: Word(
                      value: "\"EOF\"",
                      loc: "[location]",
                    ),
                    doc: Word(
                      value: "$variable should not expand\n",
                      loc: "[location]",
                    ),
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
