clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__here_docs__parse_here_doc_with_command_after.snap
---
source: clash-brush-parser/src/parser/tests/here_docs.rs
assertion_line: 110
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat <<EOF | grep hello\nhello world\ngoodbye world\nEOF\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(HereDocument(None, IoHereDocument(
                    requires_expansion: true,
                    here_end: Word(
                      value: "EOF",
                      loc: "[location]",
                    ),
                    doc: Word(
                      value: "hello world\ngoodbye world\n",
                      loc: "[location]",
                    ),
                  ))),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "grep",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "hello",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
